implement wallet provider api
